// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <InputSearch /> should match loading SnapShot 1`] = `
<SearchInput
  id="1"
  isLoading={true}
  name="test"
>
  <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    helpText=""
    htmlId={null}
    id="1"
    inputAfter={null}
    inputBefore={
      <LoadingSpinner
        aria-hidden={true}
        scale={20}
        variant="button"
      />
    }
    inputClassName=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label=""
    messageArr={Array []}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="text"
    value=""
  >
    <div
      className="md-input-container"
    >
      <div
        className="md-input__wrapper"
      >
        <InputSection
          className=""
          position="before"
        >
          <span
            className="md-input__before"
          >
            <LoadingSpinner
              aria-hidden={true}
              scale={20}
              variant="button"
            >
              <div
                aria-hidden={true}
                className="md-loading-spinner-wrapper"
                role="img"
              >
                <Spinner
                  inverted={false}
                  style={
                    Object {
                      "--mdc-spinner-size": "1.25rem",
                    }
                  }
                  variant="button"
                >
                  <mdc-spinner
                    style={
                      Object {
                        "--mdc-spinner-size": "1.25rem",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Spinner>
              </div>
            </LoadingSpinner>
          </span>
        </InputSection>
        <input
          className="md-input md-input--before"
          id="1"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
    </div>
  </Input>
</SearchInput>
`;

exports[`tests for <InputSearch /> should match normal SnapShot 1`] = `
<SearchInput
  id="1"
  isLoading={false}
  name="test"
>
  <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    helpText=""
    htmlId={null}
    id="1"
    inputAfter={null}
    inputBefore={
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="search_20"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    }
    inputClassName=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label=""
    messageArr={Array []}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="text"
    value=""
  >
    <div
      className="md-input-container"
    >
      <div
        className="md-input__wrapper"
      >
        <InputSection
          className=""
          position="before"
        >
          <span
            className="md-input__before"
          >
            <Icon
              append={false}
              ariaLabel={null}
              buttonClassName=""
              buttonProps={null}
              className=""
              color=""
              description=""
              name="search_20"
              onClick={null}
              prepend={false}
              size={null}
              sizeOverride={false}
              style={null}
              title=""
              type=""
            >
              <i
                aria-label={null}
                className="md-icon icon icon-search_20"
                style={
                  Object {
                    "fontSize": 20,
                  }
                }
              />
            </Icon>
          </span>
        </InputSection>
        <input
          className="md-input md-input--before"
          id="1"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
    </div>
  </Input>
</SearchInput>
`;

exports[`tests for <InputSearch /> should match pill SnapShot 1`] = `
<SearchInput
  id="1"
  isLoading={false}
  name="test"
  shape="pill"
>
  <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    helpText=""
    htmlId={null}
    id="1"
    inputAfter={null}
    inputBefore={
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="search_20"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    }
    inputClassName=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label=""
    messageArr={Array []}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape="pill"
    type="text"
    value=""
  >
    <div
      className="md-input-container"
    >
      <div
        className="md-input__wrapper"
      >
        <InputSection
          className=""
          position="before"
        >
          <span
            className="md-input__before"
          >
            <Icon
              append={false}
              ariaLabel={null}
              buttonClassName=""
              buttonProps={null}
              className=""
              color=""
              description=""
              name="search_20"
              onClick={null}
              prepend={false}
              size={null}
              sizeOverride={false}
              style={null}
              title=""
              type=""
            >
              <i
                aria-label={null}
                className="md-icon icon icon-search_20"
                style={
                  Object {
                    "fontSize": 20,
                  }
                }
              />
            </Icon>
          </span>
        </InputSection>
        <input
          className="md-input md-input--pill md-input--before"
          id="1"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
    </div>
  </Input>
</SearchInput>
`;
